2007-02-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* sqlite/*: Import SQLite 3.3.12.

2007-01-30  Nathaniel Smith  <njs@pobox.com>

	* po/es.po: Fix a format string that was breaking the build.

2007-01-30  Nathaniel Smith  <njs@pobox.com>

	* vocab.cc (verify(hexenc<id>)): Rename from verify_full.  Now
	actually runs (!!!).
	(verify_hexenc_id): New test.
	* vocab.hh (is_xdigit): Disallow capitalized hex digits, above
	test now passes.
	* constants.cc (regex_legal_id_bytes): No capital hex digits here,
	either!

2007-01-29  Thomas Keller  <me@thomaskeller.biz>

	* added some lua hooks to run a script after revs or certs have 
	arrived via netsync for a particular branch

2007-01-29  Matthew Gregan  <kinetik@orcon.net.nz>

	* INSTALL: Drop the libboost-serialization-dev requirement since
	it is no longer needed.

2007-01-27  Derek Scherger  <derek@echologic.com>

	* configure.ac: add AC_FUNC_MMAP check so that the ifdef for
	HAVE_MMAP in rcs_file.cc might work
	* rcs_file.cc: change ifdef for HAVE_FCNTL to HAVE_FCNTL_H to
	match config.h

2007-01-27  Timothy Brownawell  <tbrownaw@gmail.com>

	Make vocab-from-string constructors explicit. Fix (some) places
	where variables or parameters were given the wrong type.

2007-01-24  Richard Levitte  <richard@levitte.org>

	* debian/monotone-server.postinst, debian/changelog: update the
	version for which a database upgrade is needed.

2007-01-23  Zack Weinberg  <zackw@panix.com>

	* database.cc (format_sqlite_error_for_info): Look for translated
	version of "sqlite error: " too.  Problem found by tommyd on IRC.
	* po/*.po: Define the translation of this string, using the
	existing translation of "sqlite error: %s\n%s".

2007-01-21  Derek Scherger  <derek@echologic.com>

	* (read_directory): use 'entry.' instead of 'di->' for consistency
	(walk_tree_recursive): use read_directory instead of a
	directory_iterator directly to reuse some code we already have and