@@ -19,7 +19,7 @@ Write a comment cert for a revision.
 Make a "branch" cert approving of a revision's membership in a branch.
 .TP
 \fBdisapprove\fP \fI<id1>\fP
-Disapprove of a revision, committing the inverse changes as as a
+Disapprove of a revision, committing the inverse changes as a
 descendant of the disapproved revision.
 .TP
 \fBtag\fP \fI<id> <tagname>\fP
@@ -45,7 +45,7 @@ from stdin if no value given on command line.
 \fBgenkey\fP \fI<keyid>\fP
 Generate an RSA key-pair and store it in the database.
 .TP
-\chkeypass\fP \fI<keyid>\fP
+\fBchkeypass\fP \fI<keyid>\fP
 Change passphrase of the private half of a key.
 .TP
 \fBlist certs\fP \fI<id>\fP
